Fix: margin on video for large screen to improve alignment

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -478,7 +478,7 @@ p {
         overflow: hidden;
         padding-top: 56.25%; /* 16:9 Aspect Ratio (divide 9 by 16 = 0.5625) */
         position: relative;
-        margin-inline: 50px;
+        margin-inline: 60px;
         width: 90%;
     }
 
@@ -501,10 +501,7 @@ p {
 
     /*  Changes the two sections witin contact-us section to dsiplay as a row for larger screen  */
     .contact-us {
-        /* background-color: white;
-        display: flex; */
         flex-direction: row-reverse;
-        /* text-align: center; */
     }
 
     /*  Sets contact-us section to same size as similar location section on about page */
